--- a/config/roles.json.example
+++ b/config/roles.json.example
@@ -78,7 +78,8 @@
                     "preserve"
                 ]
             }
-        ]
+        ],
+        "maDeTai": "BSTMV.03/15-17"
     },
     "content": {
         "role": "content",
